<resources>

    <string name="app_name">PhotoAffix BETA</string>
    <string name="app_name_short">PhotoAffix</string>

    <string name="affix_zero">Affix (0)</string>
    <string name="affix_x">Affix (%1$d)</string>
    <string name="clear">Clear</string>
    <string name="stack">Stack</string>
    <string name="stack_horizontally">Stack horizontally</string>
    <string name="stack_vertically">Stack vertically</string>
    <string name="scale_priority_on">Scale smaller images to largest</string>
    <string name="scale_priority_off">Scale larger images to smallest</string>
    <string name="error">Error</string>
    <string name="affixing_your_photos">Affixing your photos…</string>
    <string name="retrieving_photo">Retrieving photo…</string>
    <string name="share">Share</string>
    <string name="open_with">Open With…</string>
    <string name="edit_with">Edit With…</string>
    <string name="share_using">Share Using…</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this photo?</string>
    <string name="yes">Yes</string>
    <string name="deleting">Deleting…</string>
    <string name="background_fill_color">Background fill</string>
    <string name="background_fill_color_title">Background Fill Color</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="no_photos_found">No local photos were found!</string>
    <string name="need_two_or_more">You need two or more images!</string>
    <string name="image_spacing_x">Image spacing (%1$d, %2$d)</string>
    <string name="image_spacing">Image Spacing</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="about">About</string>
    <string name="dismiss">Dismiss</string>
    <string name="about_body"><![CDATA[
        PhotoAffix, designed by <b>Aidan Follestad</b>.<br/>
        <a href=\'http://aidanfollestad.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/afollestad\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://google.com/+AidanFollestad\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/afollestad\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/afollestad\'>LinkedIn</a><br/><br/>
        Icon by <a href=\'https://plus.google.com/+EduardoPratti\'>Eduardo Pratti</a>.<br/>
        Play Store feature graphic by <a href=\'https://plus.google.com/+RikiDev\'>RB Designs</a>.<br/>
        Contributions from <a href=\'https://plus.google.com/+DanielCiao\'>Daniel Ciao</a>.<br/><br/>
        This project is <a href=\'https://github.com/afollestad/photo-affix\'>open source</a>.<br/>
        Join the <a href=\'https://plus.google.com/communities/114777506465785892824\'>Google+ community</a>, and
        <a href=\'https://play.google.com/apps/testing/com.afollestad.photoaffix\'>opt-in to beta testing</a>!
    ]]></string>
    <string name="output_settings">Output Settings</string>
    <string name="defaultStr">Default</string>
    <string name="continueStr">Continue</string>
    <string name="remove">Remove</string>
    <string name="background_fill_color_transparent">Background fill (transparent)</string>
    <string name="format">Format:</string>
    <string name="quality">Quality:</string>

</resources>
