<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="?colorPrimary">

    <LinearLayout
        android:id="@+id/settingStackHorizontally"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical|start"
        android:minHeight="@dimen/settings_control_height"
        android:paddingEnd="@dimen/content_inset"
        android:paddingStart="@dimen/content_inset">

        <CheckBox
            android:id="@+id/stackHorizontallySwitch"
            android:layout_width="@dimen/color_circle_view"
            android:layout_height="@dimen/color_circle_view"
            android:checked="true"
            android:clickable="false"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_control_text_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/stack_horizontally"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_textsize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingBgFillColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical|start"
        android:minHeight="@dimen/settings_control_height"
        android:paddingEnd="@dimen/content_inset"
        android:paddingStart="@dimen/content_inset">

        <com.afollestad.photoaffix.views.ColorCircleView
            android:id="@+id/bgFillColorCircle"
            android:layout_width="@dimen/color_circle_view"
            android:layout_height="@dimen/color_circle_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_control_text_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/background_fill_color"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_textsize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingImagePadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical|start"
        android:minHeight="@dimen/settings_control_height"
        android:paddingEnd="@dimen/content_inset"
        android:paddingStart="@dimen/content_inset">

        <ImageView
            android:layout_width="@dimen/color_circle_view"
            android:layout_height="@dimen/color_circle_view"
            android:src="@drawable/ic_border"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/imagePaddingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_control_text_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/image_spacing_x"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_textsize" />

    </LinearLayout>

</LinearLayout>